Fix password missmatch error text alignment

--- a/packages/ksf-registration/src/KSF/Registration/Registration.less
+++ b/packages/ksf-registration/src/KSF/Registration/Registration.less
@@ -54,5 +54,6 @@
 }
 
 .registration--invalid-form-text {
+    text-align: left;
     color: red;
 }
